@@ -1,3 +1,10 @@
+2011-05-09  Nick Alcock  <nick.alcock@oracle.com>
+
+	* libproc/common/Psymtab.c (Penv_iter): Remove bogus check on length of
+	argument lists: recent Linux kernels have no limit, and programs should
+	never assume a limit.
+	* libdtrace/procfs.sed.in: Remove nonexistent headers.
+
 2011-05-06  Nick Alcock  <nick.alcock@oracle.com>
 
 	* makefile (MACH): Use 'uname -m' to get machine arch.
